test_regress/t/t_class_param.out
%Error-UNSUPPORTED: t/t_class_param.v:40:11: Unsupported: parameterized classes
                                           : ... In instance t
   40 |    Cls #(.PBASE(4)) c4;
      |           ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_class_param.v:42:12: Unsupported: parameterized classes
                                           : ... In instance t
   42 |    Wrap #(.P(16)) w16;
      |            ^
%Error-UNSUPPORTED: t/t_class_param.v:48:16: Unsupported: parameterized classes
                                           : ... In instance t
   48 |       if (Cls#()::PBASE != 12) $stop;
      |                ^
%Error-UNSUPPORTED: t/t_class_param.v:49:16: Unsupported: parameterized classes
                                           : ... In instance t
   49 |       if (Cls#(4)::PBASE != 4) $stop;
      |                ^
%Error-UNSUPPORTED: t/t_class_param.v:52:16: Unsupported: parameterized classes
                                           : ... In instance t
   52 |       if (Cls#()::E_PBASE != 12) $stop;
      |                ^
%Error-UNSUPPORTED: t/t_class_param.v:53:16: Unsupported: parameterized classes
                                           : ... In instance t
   53 |       if (Cls#(4)::E_PBASE != 4) $stop;
      |                ^
%Error-UNSUPPORTED: t/t_class_param.v:60:16: Unsupported: parameterized classes
                                           : ... In instance t
   60 |       if (Cls#()::get_p() != 12) $stop;
      |                ^
%Error-UNSUPPORTED: t/t_class_param.v:61:16: Unsupported: parameterized classes
                                           : ... In instance t
   61 |       if (Cls#(4)::get_p() != 4) $stop;
      |                ^
%Error-UNSUPPORTED: t/t_class_param.v:13:24: Unsupported: class parameters
                                           : ... In instance t
   13 | class Wrap #(parameter P = 13);
      |                        ^
%Error-UNSUPPORTED: t/t_class_param.v:21:15: Unsupported: class parameters
                                           : ... In instance t
   21 |    localparam PMINUS1 = P - 1;   
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_class_param.v:24:23: Unsupported: class parameters
                                           : ... In instance t
   24 | class Cls #(parameter PBASE = 12);
      |                       ^~~~~
%Error-UNSUPPORTED: t/t_class_param.v:35:14: Unsupported: parameterized classes
                                           : ... In instance t
   35 | typedef Cls#(8) Cls8_t;
      |              ^
%Error-UNSUPPORTED: t/t_class_param.v:20:17: Unsupported: parameterized classes
                                           : ... In instance t
   20 |    Cls#(PMINUS1 + 1) c1;
      |                 ^
%Error: Exiting due to
